Use 'scale' option instead of 'precision' on forms when using SF >= 2.7

--- a/Resources/templates/CommonAdmin/ListTemplate/Column/money.php.twig
+++ b/Resources/templates/CommonAdmin/ListTemplate/Column/money.php.twig
@@ -1,7 +1,7 @@
 {% block column_money %}
 {% spaceless %}
     {% set currency   = column.formOptions.currency|default('EUR') %}
-    {% set precision  = column.formOptions.precision|default(2) %}
+    {% set precision  = column.formOptions.scale is defined ? column.formOptions.scale|default(2) : column.formOptions.precision|default(2) %}
     {% set grouping   = column.formOptions.grouping|default(true) %}
     {% set divisor    = column.formOptions.divisor|default(1) %}
 
