Removed usage of deprecated Twig form rendering function 'form_enctype'.

--- a/Resources/templates/CommonAdmin/ListTemplate/FiltersBuilderTemplate.php.twig
+++ b/Resources/templates/CommonAdmin/ListTemplate/FiltersBuilderTemplate.php.twig
@@ -1,7 +1,7 @@
 {% block list_filters %}
 {{ echo_block('list_filters') }}
 <div class="row-fluid filters-list">
-    <form action="{{ echo_path(builder.routePrefixWithSubfolder ~ '_' ~ bundle_name ~ ( builder.BaseGeneratorName ? "_" ~ builder.BaseGeneratorName : "" ) ~ "_filters" ) }}" method="post" {{ echo_twig("form_enctype(form)") }}>
+    <form action="{{ echo_path(builder.routePrefixWithSubfolder ~ '_' ~ bundle_name ~ ( builder.BaseGeneratorName ? "_" ~ builder.BaseGeneratorName : "" ) ~ "_filters" ) }}" method="post">
         <legend>{{ echo_trans('list.filters') }}</legend>
         <fieldset class="form_block form_fieldset_NONE">
             {{ echo_twig("form_errors(form)") }}
