--- a/Resources/templates/CommonAdmin/EditTemplate/FormBuilderTemplate.php.twig
+++ b/Resources/templates/CommonAdmin/EditTemplate/FormBuilderTemplate.php.twig
@@ -9,7 +9,7 @@
         {{ echo_else() }}
             action="{{ echo_path(builder.routePrefixWithSubfolder ~ '_' ~ bundle_name ~ ( builder.BaseGeneratorName ? "_" ~ builder.BaseGeneratorName : "" ) ~ "_create" ) }}"
         {{ echo_endif () }}
-        method="post" {{ echo_twig("form_enctype(form)") }}>
+        method="post" {{ echo_twig("form.vars.multipart is same as(true) ? 'enctype=\"multipart/form-data\"'") }}>
 
         {{ echo_twig("form_errors(form)") }}
         {% if tabs is defined and tabs|length > 0 %}
