--- a/Resources/templates/CommonAdmin/EditAction/update.php.twig
+++ b/Resources/templates/CommonAdmin/EditAction/update.php.twig
@@ -5,7 +5,7 @@
 
 {% block update %}
 
-    public function updateAction($pk)
+    public function updateAction(\Symfony\Component\HttpFoundation\Request $request, $pk)
     {
         ${{ builder.ModelClass }} = $this->getObject($pk);
 
@@ -17,7 +17,7 @@
 
         $this->preBindRequest(${{ builder.ModelClass }});
         $form = $this->createForm($this->getEditType(), ${{ builder.ModelClass }}, $this->getFormOptions(${{ builder.ModelClass }}));
-        $form->bind($this->get('request'));
+        $form->bind($request);
 
         if ($form->isValid()) {
             try {
@@ -32,9 +32,9 @@
 
                 $this->get('session')->getFlashBag()->add('success', $this->get('translator')->trans("{{ messages.success|default("action.object.edit.success") }}", array(), 'Admingenerator') );
 
-                if($this->get('request')->request->has('save-and-add'))
+                if($request->request->has('save-and-add'))
                   return new RedirectResponse($this->generateUrl("{{ builder.routePrefixWithSubfolder }}_{{ bundle_name }}{{ builder.BaseGeneratorName ? "_" ~ builder.BaseGeneratorName : "" }}_new" ));
-                if($this->get('request')->request->has('save-and-list'))
+                if($request->request->has('save-and-list'))
                   return new RedirectResponse($this->generateUrl("{{ builder.routePrefixWithSubfolder }}_{{ bundle_name }}{{ builder.BaseGeneratorName ? "_" ~ builder.BaseGeneratorName : "" }}_list" ));
                 else
                   return new RedirectResponse($this->generateUrl("{{ builder.routePrefixWithSubfolder }}_{{ bundle_name }}{{ builder.BaseGeneratorName ? "_" ~ builder.BaseGeneratorName : "" }}_edit", array('pk' => $pk) ));
