--- a/Resources/templates/CommonAdmin/ListAction/scopes.php.twig
+++ b/Resources/templates/CommonAdmin/ListAction/scopes.php.twig
@@ -1,13 +1,13 @@
 {% block scopes %}
-    public function scopesAction()
+    public function scopesAction(\Symfony\Component\HttpFoundation\Request $request)
     {
-        if ($this->get('request')->get('reset')) {
+        if ($request->get('reset')) {
             $this->setScopes(array());
 
             return new RedirectResponse($this->generateUrl("{{ builder.routePrefixWithSubfolder }}_{{ bundle_name }}{{ builder.BaseGeneratorName ? "_" ~ builder.BaseGeneratorName : "" }}_list"));
         }
 
-        $this->setScope($this->get('request')->get('group'), $this->get('request')->get('scope'));
+        $this->setScope($request->get('group'), $request->get('scope'));
 
         return new RedirectResponse($this->generateUrl("{{ builder.routePrefixWithSubfolder }}_{{ bundle_name }}{{ builder.BaseGeneratorName ? "_" ~ builder.BaseGeneratorName : "" }}_list"));
     }
