--- a/Resources/templates/EmptyBuilderAction.php.twig
+++ b/Resources/templates/EmptyBuilderAction.php.twig
@@ -10,12 +10,12 @@ use Admingenerator\GeneratorBundle\Exception\CantGenerateException;
  */
 class {{ controllerName }} extends Controller
 {
-    public function indexAction({% if require_pk %}$pk{% endif %})
+    public function indexAction(\Symfony\Component\HttpFoundation\Request $request{% if require_pk %}, $pk{% endif %})
     {
-        if ($this->get('request')->get('stop_loop')) {
+        if ($request->get('stop_loop')) {
             throw new CantGenerateException('Opps an error occurred in your configuration. If you\'re in prod try cache:warmup');
         }
 
-        return $this->redirect($this->get('request')->getRequestUri()."?stop_loop=true");
+        return $this->redirect($request->getRequestUri()."?stop_loop=true");
     }
 }
