Use the new security.authorization_checker service instead of the old security.context whenever possible.

--- a/Resources/templates/CommonAdmin/EditAction/EditBuilderAction.php.twig
+++ b/Resources/templates/CommonAdmin/EditAction/EditBuilderAction.php.twig
@@ -27,7 +27,7 @@ class EditController extends BaseController
     protected function getEditType()
     {
         $type = new EditType();
-        $type->setSecurityContext($this->get('security.context'));
+        $type->setAuthorizationChecker($this->has('security.authorization_checker') ? $this->get('security.authorization_checker') : $this->get('security.context'));
 
         return $type;
     }
