--- a/Resources/templates/Doctrine/NestedListBuilderAction.php.twig
+++ b/Resources/templates/Doctrine/NestedListBuilderAction.php.twig
@@ -47,7 +47,7 @@
         {% endfor -%}
 
         $type = new FiltersType();
-        $type->setSecurityContext($this->get('security.context'));
+        $type->setAuthorizationChecker($this->has('security.authorization_checker') ? $this->get('security.authorization_checker') : $this->get('security.context'));
 
         return $this->createForm($type, $filters);
     }
