--- a/Resources/templates/Propel/NestedListBuilderAction.php.twig
+++ b/Resources/templates/Propel/NestedListBuilderAction.php.twig
@@ -29,7 +29,7 @@
         $filters = $this->getFilters();
 
         $type = new FiltersType();
-        $type->setSecurityContext($this->get('security.context'));
+        $type->setAuthorizationChecker($this->has('security.authorization_checker') ? $this->get('security.authorization_checker') : $this->get('security.context'));
 
         return $this->createForm($type, $this->getFilters());
     }
