Fix count compatibility for PHP7.2

--- a/Resources/templates/CommonAdmin/ListTemplate/ListBuilderTemplate.php.twig
+++ b/Resources/templates/CommonAdmin/ListTemplate/ListBuilderTemplate.php.twig
@@ -19,14 +19,14 @@
     {{- block('title') -}}
 
     <div class="row">
-        <div class="{% if builder.filterColumns|length == 0 %} col-md-12 {% else %} col-md-9 {% endif %}">
+        <div class="{% if builder.filterColumns|default([])|length == 0 %} col-md-12 {% else %} col-md-9 {% endif %}">
             {{- block('list_scopes') -}}
 
             {{ echo_include(builder.namespacePrefixForTemplate ~ bundle_name ~ ':' ~ builder.BaseGeneratorName ~ 'List:results.html.twig') }}
         </div>
 
         {{ echo_block("filters") }}
-            {% if builder.filterColumns|length > 0 %}
+            {% if builder.filterColumns|default([])|length > 0 %}
             <div class="col-md-3">
                 {{ echo_include(builder.namespacePrefixForTemplate ~ bundle_name ~ ':' ~ builder.BaseGeneratorName ~ 'List:filters.html.twig') }}
             </div>
