--- a/Resources/templates/CommonAdmin/batch_actions.php.twig
+++ b/Resources/templates/CommonAdmin/batch_actions.php.twig
@@ -35,13 +35,13 @@
 {% block batch_action_block %}
     {% set translationDomain = action.type is same as('custom') ? i18n_catalog|default("Admin") : 'Admingenerator' %}
     <option value="{{ action.name }}" {%- if action.confirm %} data-confirm='{{ echo_trans(action.confirm, {}, translationDomain) }}' {% endif -%}>
-        {% if action.icon %}<i class="{% if action.icon is defined and action.icon|length > 0 %}fa {{ action.icon }}{% endif %}"></i> {% endif %}{{ echo_trans(action.label, {}, translationDomain) }}
+        {% if action.icon %}<i class="{% if action.icon is defined and action.icon|default([])|length > 0 %}fa {{ action.icon }}{% endif %}"></i> {% endif %}{{ echo_trans(action.label, {}, translationDomain) }}
     </option>
 {% endblock %}
 
 {% block form_batch_actions %}
 {{ echo_block("form_batch_actions") }}
-{% if batch_actions is defined and batch_actions|length > 0 %}
+{% if batch_actions is defined and batch_actions|default([])|length > 0 %}
     {% set actionPathName = builder.routePrefixWithSubfolder ~ '_' ~ bundle_name ~ ( builder.BaseGeneratorName ? "_" ~ builder.BaseGeneratorName : "" ) ~ '_batch' %}
     <form id="form-list-{{ builder.ModelClass }}" method="post" action="{{ echo_path(actionPathName) }}">
         <input type="hidden" value="{{ echo_twig_filter(actionPathName, 'csrf_token', true) }}" name="_csrf_token" />
@@ -51,7 +51,7 @@
 
 {% block endform_batch_actions %}
 {{ echo_block("endform_batch_actions") }}
-{% if batch_actions is defined and batch_actions|length > 0 %}
+{% if batch_actions is defined and batch_actions|default([])|length > 0 %}
     </form>
     <script src="{{ echo_twig('asset("bundles/admingeneratorgenerator/js/admingenerator/batch-actions.js")') }}"></script>
     <script type="text/javascript">
