--- a/Resources/templates/CommonAdmin/EditTemplate/FormBuilderTemplate.php.twig
+++ b/Resources/templates/CommonAdmin/EditTemplate/FormBuilderTemplate.php.twig
@@ -12,13 +12,13 @@
         method="post" {{ echo_twig("form.vars.multipart is same as(true) ? 'enctype=\"multipart/form-data\"'") }}>
 
         {{ echo_twig("form_errors(form)") }}
-        {% if tabs is defined and tabs|length > 0 %}
+        {% if tabs is defined and tabs|default([])|length > 0 %}
         <div class="tab-content">
         {% endif %}
         {% for fieldset in builder.fieldsets|keys %}
             {{- block('form_fieldset') }}
         {% endfor -%}
-        {% if tabs is defined and tabs|length > 0 %}
+        {% if tabs is defined and tabs|default([])|length > 0 %}
         </div>
         {% endif %}
 
