--- a/Resources/templates/CommonAdmin/ListTemplate/ResultsBuilderTemplate.php.twig
+++ b/Resources/templates/CommonAdmin/ListTemplate/ResultsBuilderTemplate.php.twig
@@ -17,13 +17,13 @@
         </table>
 
         <div class="form-group list-actions col-md-12">
-        {% if batch_actions is defined and batch_actions|length > 0 %}
+        {% if batch_actions is defined and batch_actions|default([])|length > 0 %}
             <div id="batch_actions" class="pull-left btn-toolbar" role="toolbar">
                 {{ block('batch_actions') }}
             </div>
         {% endif -%}
 
-        {% if actions is defined and actions|length > 0 %}
+        {% if actions is defined and actions|default([])|length > 0 %}
             <div id="generic_actions" class="pull-left btn-toolbar" role="toolbar">
                 {{ block('generic_actions') -}}
             </div>
