--- a/Resources/templates/CommonAdmin/ListTemplate/row.php.twig
+++ b/Resources/templates/CommonAdmin/ListTemplate/row.php.twig
@@ -7,7 +7,7 @@
 
 {% block list_row_content %}
 {{ echo_block("list_row_content") }}
-    {% if batch_actions is defined and batch_actions|length > 0 %}
+    {% if batch_actions is defined and batch_actions|default([])|length > 0 %}
         <td class="td_batch_action">
             <input type="checkbox" name="selected[]" class="batch_select_id" value="{{- echo_twig(builder.ModelClass ~ '.' ~ builder.getFieldGuesser().getModelPrimaryKeyName(model)) -}}" />
         </td>
