--- a/Resources/templates/CommonAdmin/ListTemplate/tbody.php.twig
+++ b/Resources/templates/CommonAdmin/ListTemplate/tbody.php.twig
@@ -3,7 +3,7 @@
 {% block list_tbody %}
 {{ echo_block("list_tbody") }}
     <tbody>
-        {{ echo_if (builder.ModelClass ~ "s|length > 0") }}
+        {{ echo_if (builder.ModelClass ~ "s|default([])|length > 0") }}
 
         {{ echo_for(builder.ModelClass, builder.ModelClass ~ "s" ) }}
             {{ echo_include(builder.namespacePrefixForTemplate ~ bundle_name ~ ':' ~ builder.BaseGeneratorName ~ 'List:row.html.twig') }}
@@ -13,10 +13,10 @@
 
         {{ echo_else() }}
         <tr class="list_trow no_results_row">
-        {% if batch_actions is defined and batch_actions|length > 0 %}
-            <td colspan="{{ (object_actions|length > 0) ? (builder.columns|length + 2) : builder.columns|length+1 }}">{{ echo_trans('list.no.results') }}</td>
+        {% if batch_actions is defined and batch_actions|default([])|length > 0 %}
+            <td colspan="{{ (object_actions|default([])|length > 0) ? (builder.columns|default([])|length + 2) : builder.columns|default([])|length+1 }}">{{ echo_trans('list.no.results') }}</td>
         {% else %}
-            <td colspan="{{ (object_actions|length > 0) ? (builder.columns|length + 1) : builder.columns|length }}">{{ echo_trans('list.no.results') }}</td>
+            <td colspan="{{ (object_actions|default([])|length > 0) ? (builder.columns|default([])|length + 1) : builder.columns|default([])|length }}">{{ echo_trans('list.no.results') }}</td>
         {% endif %}
         </tr>
         {{ echo_endif () }}
