--- a/Resources/templates/CommonAdmin/generic_actions.php.twig
+++ b/Resources/templates/CommonAdmin/generic_actions.php.twig
@@ -1,6 +1,6 @@
 {% block generic_actions %}
 {{ echo_block("generic_actions") }}
-    {% if builder.Actions|length > 0 %}
+    {% if builder.Actions|default([])|length > 0 %}
         {% for action in builder.Actions %}
             {{ echo_block("generic_action_" ~ action.twigName) }}
             {% if action.credentials or builder.generator.getFromYaml('builders.' ~ action.name ~ '.params.credentials') %}
@@ -36,20 +36,20 @@
     {% if action.submit %}
         <button type="submit" name="{{ action.name }}" class="btn {{ action.class|default('btn-default') }}"
           {%- if action.confirm %} data-confirm="{{ echo_trans(action.confirm, {}, translationDomain) }}"{% endif %}>
-          {%- if action.icon %}<i class="{% if action.icon is defined and action.icon|length > 0 %}fa {{ action.icon }}{% endif %}"></i> {% endif %}{{ echo_trans(action.label, {}, translationDomain) }}
+          {%- if action.icon %}<i class="{% if action.icon is defined and action.icon|default([])|length > 0 %}fa {{ action.icon }}{% endif %}"></i> {% endif %}{{ echo_trans(action.label, {}, translationDomain) }}
         </button>
     {% else %}
         <a class="btn {{ action.class|default('btn-default') }}" href="{{ echo_path(actionRoute, actionParams) }}"
           {%- if action.confirm %} data-confirm="{{ echo_trans(action.confirm, {}, translationDomain) }}"{% endif %}
           {%- if action.csrfProtected %} data-csrf-token="{{ echo_path(actionRoute, actionParams, ['csrf_token']) }}" {% endif -%}>
-          {%- if action.icon %}<i class="{% if action.icon is defined and action.icon|length > 0 %}fa {{ action.icon }}{% endif %}"></i> {% endif %}{{ echo_trans(action.label, {}, translationDomain) }}
+          {%- if action.icon %}<i class="{% if action.icon is defined and action.icon|default([])|length > 0 %}fa {{ action.icon }}{% endif %}"></i> {% endif %}{{ echo_trans(action.label, {}, translationDomain) }}
         </a>
     {% endif %}
 {% endblock %}
 
 {% block generic_actions_script %}
 {{ echo_block("generic_actions_script") }}
-{% if builder.Actions is defined and builder.Actions|length > 0 %}
+{% if builder.Actions is defined and builder.Actions|default([])|length > 0 %}
     <script src="{{ echo_twig('asset("bundles/admingeneratorgenerator/js/admingenerator/generic-actions.js")') }}"></script>
     <script type="text/javascript">
         ;(function(window, $, undefined) {
