--- a/Resources/templates/CommonAdmin/object_actions.php.twig
+++ b/Resources/templates/CommonAdmin/object_actions.php.twig
@@ -1,6 +1,6 @@
 {% block object_actions %}
     {{ echo_block("object_actions") }}
-        {% if object_actions is defined  and object_actions|length > 0 %}
+        {% if object_actions is defined  and object_actions|default([])|length > 0 %}
             {% if builder.yamlKey is same as('list') or builder.yamlKey is same as('nested_list') %}
             <td class="object_actions">
             {% endif %}
@@ -37,7 +37,7 @@
 
 {% block object_actions_script %}
     {{ echo_block("object_actions_script") }}
-    {% if object_actions is defined and object_actions|length > 0 %}
+    {% if object_actions is defined and object_actions|default([])|length > 0 %}
     <script src="{{ echo_twig('asset("bundles/admingeneratorgenerator/js/admingenerator/object-actions.js")') }}"></script>
     <script type="text/javascript">
         ;(function(window, $, undefined){
